# onda

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  cli.py  pyproject.toml
docs/: network-architecture.md  pi_setup.md  transports.md
examples/: demo_cable_cut_lan.sh  demo_proximity_three_nodes.py  demo_two_nodes.sh
src/onda/: __init__.py  __main__.py  cli.py  config.py  crypto.py  identity.py  ipc.py  llm.py  log.py  memory.py  node.py  protocol.py  transport.py
src/onda/network/: __init__.py  manager.py  transport_base.py
src/onda/transports/: __init__.py  _ble_framing.py  _libp2p_shared.py  _mailbox.py  bluetooth.py  internet.py  lan.py  mock.py  proximity.py  wifi_direct.py
tests/: conftest.py  test_ble_framing.py  test_identity.py  test_integration.py  test_manager.py  test_memory.py  test_mock_transport.py  test_protocol.py  test_proximity.py  test_transport_base.py  test_wifi_direct.py
